wikimedia.org: update CNAMEs for ntp.$site
Use the new anycast NTP address instead of the per-site host CNAMEs.
This was pointed out by Arzhel in T347054#9223568.

Bug: T347054
Change-Id: I6dace149b17afdbb0c00ad2678bbde81142dc7a5

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -188,22 +188,22 @@ pay-lvs1002     1H  IN A    208.80.155.3
 ; Service aliases
 
 ;;; eqiad
-ntp.eqiad           1H  IN CNAME dns1004
+ntp.eqiad           1H  IN CNAME ntp.anycast.wmnet.
 
 ;;; ulsfo
-ntp.ulsfo           1H  IN CNAME dns4003
+ntp.ulsfo           1H  IN CNAME ntp.anycast.wmnet.
 
 ;;; codfw
-ntp.codfw           1H  IN CNAME dns2004
+ntp.codfw           1H  IN CNAME ntp.anycast.wmnet.
 
 ;;; esams
-ntp.esams           1H  IN CNAME dns3003
+ntp.esams           1H  IN CNAME ntp.anycast.wmnet.
 
 ;;; eqsin
-ntp.eqsin           1H  IN CNAME dns5003
+ntp.eqsin           1H  IN CNAME ntp.anycast.wmnet.
 
 ;;; drmrs
-ntp.drmrs           1H  IN CNAME dns6001
+ntp.drmrs           1H  IN CNAME ntp.anycast.wmnet.
 
 ; Round Robin LVS Service records
 
