wmfusercontent: add TXT record for cert validation
Bug: T339267
Change-Id: I5edffde44b3c54a0b72b7518c990acb0c130ec1d

--- a/templates/wmfusercontent.org
+++ b/templates/wmfusercontent.org
@@ -12,6 +12,8 @@
 
 ; SPF txt and rr records (no email)
 @           600 IN TXT  "v=spf1 -all"
+; TXT record for verification: T339267
+@           600 IN TXT "ykvplzy7pqdz8n8gyvrvhlvys22pg55h"
 
 ; Canonical names
 @           600 IN DYNA geoip!text-addrs
