wikimedia.org: update DNS records for Greenhouse
As requested in the task below and in the switch to gh-mail for
Greenhouse, update the relevant DNS records.

Bug: T348335
Change-Id: I386d946702d57e00de5c16a86f97f2e2e29eaf45

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -668,6 +668,9 @@ careers          1D IN CNAME dyna.wikimedia.org.
 gh-mail          1H  IN MX       10 mxa.mailgun.org.
 gh-mail          1H  IN MX       10 mxb.mailgun.org.
 gh-mail          1H  IN TXT  "v=spf1 include:mg-spf.greenhouse.io ~all"
+; Updates requested in T348335
+email.gh-mail    1H  IN CNAME    mailgun.org.
+mailo._domainkey 1H  IN TXT      "k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQDsCM/wv9cgbIAwNt2mDHSxgeEmwvvJW99zCdy9J2yuFykNA2r7ZEXjl33CsoEqODCorPFEsgn3zg8ixSetXcujgUR0YuNRYSbhnaK+lW1nDyjYsW2G6Snev7Wz20tpGMGIQbVQPMOJNSl5yoBnvZBPB5Uajvu0pZTcKJMSnlGd7wIDAQAB"
 civicrm          1H  IN A        208.80.155.17
 civicrm          1H  IN MX       10 mx1001
 civicrm          1H  IN MX       10 mx2001
