--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -359,6 +359,7 @@ alerts          5M  IN CNAME    alert1001
 annual          1D IN CNAME dyna.wikimedia.org.
 
 apt             300/10 IN DYNA metafo!disc-apt
+apt-staging     1D IN CNAME dyna.wikimedia.org.
 
 archiva         1H  IN CNAME    archiva1002
 
