--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -23,6 +23,8 @@ ns2         1D  IN A    198.35.27.27 ; anycasted authdns
 @           600 IN TXT  "google-site-verification=uzfgD0YiIqSQgRdSQXlkA7NByyyOZDp-n0SZ3nozpDM"
 ; Jamf site verification, requested in T349665
 @           600 IN TXT  "jamf-site-verification=NxGVeSleTFBLZiknd4D94A"
+; 1Password site verification, requested in T352579
+@           600 IN TXT  "1password-site-verification=ZAZP5U62WJFMDDZKWJG7TPKFI4"
 
 ; SPF txt and rr records
 @               600 IN TXT  "v=spf1 ip4:185.15.59.0/24 ip4:208.80.152.0/22 ip6:2620:0:860::/46 include:_spf.google.com ip4:74.121.51.111 ~all"
