community-crm: Add dyna and discovery records
Contains stub for crm1001 which does not exist yet but will in the near
future.

Bug: T343486
Bug: T349402
Change-Id: I021003616d97a99b5ee21f852d67cfbcb746de33

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -396,6 +396,8 @@ cache           1D IN CNAME dyna.wikimedia.org.
 
 commons-query   1D IN CNAME dyna.wikimedia.org.
 
+community-crm   1D IN CNAME dyna.wikimedia.org.
+
 config-master   1D IN CNAME dyna.wikimedia.org.
 
 contint         5M IN CNAME contint2002.wikimedia.org.
