wdqs graph-split: add experimental svcs
When it comes time to deploy, we'll follow these steps:
https://wikitech.wikimedia.org/wiki/DNS#Changing_records_in_a_zonefile

Bug: T354662
Change-Id: Ia479734823ca8956e31df1154b800ee29d8f22f4

--- a/templates/wikidata.org
+++ b/templates/wikidata.org
@@ -31,7 +31,10 @@
 ; Servers (alphabetic order)
 
 ; Service aliases
-query         1D IN CNAME dyna.wikimedia.org.
+query                        1D IN CNAME dyna.wikimedia.org.
+query-full-experimental      1D IN CNAME dyna.wikimedia.org.
+query-main-experimental      1D IN CNAME dyna.wikimedia.org.
+query-scholarly-experimental 1D IN CNAME dyna.wikimedia.org.
 
 ; Wikis (alphabetic order)
 
