--- a/templates/wikifunctions.org
+++ b/templates/wikifunctions.org
@@ -14,8 +14,8 @@
 ; Canonical names
 @               600 IN DYNA geoip!text-addrs
 
-; Google Webmaster Tools verification record for search management [Needs value]
-;@               600 IN TXT  "google-site-verification=…"
+; Google Webmaster Tools verification record for search management. Documented in T355308.
+@               600 IN TXT  "google-site-verification=b5yMq36eaNEQGWpBaatU5KV9s4mjf8m1SoSZ2UmcIII"
 
 ; SPF records
 @               600 IN TXT  "v=spf1 include:wikimedia.org ~all"
