--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -44,9 +44,9 @@ $ORIGIN eqiad1.wikimediacloud.org.
 object 5M IN CNAME openstack ; object storage (Swift/S3)
 
 ; Rabbitmq nodes
-rabbitmq01 5M  IN CNAME  cloudrabbit1001.wikimedia.org.
-rabbitmq02 5M  IN CNAME  cloudrabbit1002.wikimedia.org.
-rabbitmq03 5M  IN CNAME  cloudrabbit1002.wikimedia.org.
+rabbitmq01 5M  IN CNAME  cloudrabbit1003.private.eqiad.wikimedia.cloud.
+rabbitmq02 5M  IN CNAME  cloudrabbit1003.private.eqiad.wikimedia.cloud.
+rabbitmq03 5M  IN CNAME  cloudrabbit1003.private.eqiad.wikimedia.cloud.
 
 nat.cloudgw         5M  IN A      185.15.56.1
 
