--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -158,6 +158,8 @@ donate      600 IN DYNA geoip!text-addrs
 donate          1H  IN MX       10 mx1001
 donate          1H  IN MX       50 mx2001
 donate          5M  IN TXT  "v=spf1 ip4:185.15.59.0/24 ip4:208.80.152.0/22 ip6:2620:0:860::/46 include:_spf.google.com ip4:74.121.51.111 ~all"
+; Google site verification for https://postmaster.google.com
+donate          300 IN TXT  "google-site-verification=JjhlduqLloGdWYGuMopl6ZyeNHh5Exph9dISsMGSo90"
 _dmarc.donate   1H  IN TXT "v=DMARC1; p=none; sp=none; rua=mailto:dmarc@donate.wikimedia.org; ruf=mailto:dmarc@donate.wikimedia.org;"
 
 ; Servers (alphabetic order) << WHAT PART ABOUT THIS IS SO HARD TO UNDERSTAND?
