--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -17,7 +17,7 @@ ns2         1D  IN A    198.35.27.27 ; anycasted authdns
 @           1H  IN MX   10  mx2001
 
 ; Canonical names
-@           600 IN DYNA geoip!text-addrs
+@           300 IN DYNA geoip!text-addrs
 
 ; Google Webmaster Tools verification record for search management
 @           600 IN TXT  "google-site-verification=uzfgD0YiIqSQgRdSQXlkA7NByyyOZDp-n0SZ3nozpDM"
@@ -138,7 +138,8 @@ lp.email    1H  IN CNAME pages04.net.
 ; name which has other metadata alongside its addresses (e.g. MX, SPF, DMARC).
 ; (www.wikipedia.org was a better/previous choice, but it was moved here due to
 ; interactions with selective CN censorhsip at the DNS level)
-dyna            600 IN DYNA geoip!text-addrs
+; February 2024: We reduced this to 300 seconds from the earlier 600 seconds: T140365#9509590
+dyna            300 IN DYNA geoip!text-addrs
 
 dumps           1H  IN CNAME clouddumps1002
 
@@ -159,11 +160,12 @@ reflect      10 IN DYNA reflect ; GeoDNS debugging - returns best of either abov
 
 ; Geodynamic records
 text-lb     1D IN CNAME dyna.wikimedia.org.
-ncredir-lb  600 IN DYNA geoip!ncredir-addrs
-upload      600 IN DYNA geoip!upload-addrs
+ncredir-lb  300 IN DYNA geoip!ncredir-addrs
+; February 2024: We reduced this to 300 seconds from the earlier 600 seconds: T140365#9509590
+upload      300 IN DYNA geoip!upload-addrs
 maps        600 IN CNAME upload.wikimedia.org.
 m           1D IN CNAME dyna.wikimedia.org.
-donate      600 IN DYNA geoip!text-addrs
+donate      300 IN DYNA geoip!text-addrs
 donate          1H  IN MX       10 mx1001
 donate          1H  IN MX       50 mx2001
 donate          5M  IN TXT  "v=spf1 ip4:185.15.59.0/24 ip4:208.80.152.0/22 ip6:2620:0:860::/46 include:_spf.google.com ip4:74.121.51.111 ~all"
@@ -379,7 +381,7 @@ apt-staging     1D IN CNAME dyna.wikimedia.org.
 
 archiva         1H  IN CNAME    archiva1002
 
-benefactors     600 IN DYNA     geoip!text-addrs
+benefactors     300 IN DYNA     geoip!text-addrs
 benefactors     1H  IN MX       10 mx1001
 benefactors     1H  IN MX       50 mx2001
 benefactors     1H  IN TXT      "v=spf1 include:wikimedia.org include:spf.mandrillapp.com -all"
@@ -468,7 +470,7 @@ idm-test        5M  IN CNAME idm-test1001.wikimedia.org.
 idp             5M  IN CNAME idp1002.wikimedia.org.
 idp-test        5M  IN CNAME idp-test1002.wikimedia.org.
 
-intake-logging   600 IN DYNA  geoip!text-next
+intake-logging   300 IN DYNA  geoip!text-next
 intake-analytics 1D  IN CNAME dyna.wikimedia.org.
 
 integration     1D IN CNAME dyna.wikimedia.org.
@@ -533,7 +535,7 @@ research         1D IN CNAME dyna.wikimedia.org.
 
 reports.frdev   1H  IN CNAME    frdev-eqiad
 
-rt              600 IN DYNA     geoip!text-addrs
+rt              300 IN DYNA     geoip!text-addrs
 rt              1H  IN MX       10 mx1001
 rt              1H  IN MX       50 mx2001
 
