wikimedia.org: add trace
Bug: T320555
Change-Id: I7d81a9d78b45fe9b8eb427782314d0a54ad80cbf

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -773,6 +773,7 @@ yarn             1D IN CNAME dyna.wikimedia.org.
 turnilo          1D IN CNAME dyna.wikimedia.org.
 schema           1D IN CNAME dyna.wikimedia.org.
 thanos           1D IN CNAME dyna.wikimedia.org.
+trace            1D IN CNAME dyna.wikimedia.org.
 os-reports       1D IN CNAME dyna.wikimedia.org.
 enterprise       1D IN CNAME dyna.wikimedia.org.
 unseen           1D IN CNAME dyna.wikimedia.org.
