wikimedia.org: provision public mpic subdomain
Bug: T361338
Change-Id: I1bc6f7a8c387f33e2298aa746be15cb4570001f8

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -718,6 +718,8 @@ labsconsole      1D IN CNAME dyna.wikimedia.org.
 logstash         1D IN CNAME dyna.wikimedia.org.
 cas-logstash     1D IN CNAME dyna.wikimedia.org.
 moon             1D IN CNAME dyna.wikimedia.org.
+mpic             1D IN CNAME dyna.wikimedia.org.
+mpic-next        1D IN CNAME dyna.wikimedia.org.
 netbox-next      1D IN CNAME dyna.wikimedia.org.
 noc              1D IN CNAME dyna.wikimedia.org.
 old-bugzilla     1D IN CNAME dyna.wikimedia.org.
