--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -185,6 +185,7 @@ $INCLUDE netbox/wikimedia.org-esams
 $INCLUDE netbox/wikimedia.org-eqiad
 $INCLUDE netbox/wikimedia.org-codfw
 $INCLUDE netbox/wikimedia.org-drmrs
+$INCLUDE netbox/wikimedia.org-magru
 
 ; Fundraising tech hosts (no automation)
 civi1002        1H  IN A    208.80.155.17 ; wmf-zone-validator-ignore=TOO_MANY_PUBLIC_NAMES,MISSING_PTR_FOR_NAME_AND_IP
