create ae.wikimedia.org for United Arab Emirates User Group
A new subdomain for the

"Wikimedians of United Arab Emirates User Group Wiki"

As T362529#9717133 says we use country TLDs for chapters
and user groups.

https://en.wikipedia.org/wiki/.ae

Bug: T362529
Change-Id: I23cb7cd2911ff7f522d74b33b1dfde43523489d1

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -568,6 +568,7 @@ url-downloader        5M  IN CNAME url-downloader.eqiad
 
 advisors         1D IN CNAME dyna.wikimedia.org.
 advisory         1D IN CNAME dyna.wikimedia.org.
+ae               1H IN CNAME dyna.wikimedia.org.
 affcom           1D IN CNAME dyna.wikimedia.org.
 am               1D IN CNAME dyna.wikimedia.org.
 amical           1D IN CNAME dyna.wikimedia.org.
