datasets-config: create public wikimedia.org subdomain
Bug: T357434
Change-Id: I90548d47f466ef791afa8dd2324b94a03e6f7be8

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -713,6 +713,8 @@ coffee           1D IN CNAME dyna.wikimedia.org.
 cs               1D IN CNAME dyna.wikimedia.org.
 cz               1D IN CNAME dyna.wikimedia.org.
 datasets         1D IN CNAME dyna.wikimedia.org.
+datasets-config  1D IN CNAME dyna.wikimedia.org.
+datasets-config-next 1D IN CNAME dyna.wikimedia.org.
 diff             1H IN CNAME blog-wikimedia-org.go-vip.net.
 download         1D IN CNAME dyna.wikimedia.org.
 etherpad         1D IN CNAME dyna.wikimedia.org.
