--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -403,6 +403,8 @@ bienvenida      1D IN CNAME dyna.wikimedia.org.
 
 cache           1D IN CNAME dyna.wikimedia.org.
 
+cloudtestidm    1D IN CNAME dyna.wikimedia.org.
+
 commons-query   1D IN CNAME dyna.wikimedia.org.
 
 community-crm   1D IN CNAME dyna.wikimedia.org.
