dns: provision datahub-next subdomain
We are moving datahub to the dse-k8s cluster and part of the move is having a functional
staging cluster for datahub which shall be under datahub-next.

Bug: T365576
Change-Id: I42b6a8bccc4a02c858526e774e2b8405f16ef301

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -415,6 +415,7 @@ config-master   1D IN CNAME dyna.wikimedia.org.
 contint         5M IN CNAME contint1002.wikimedia.org.
 
 datahub         1D IN CNAME dyna.wikimedia.org.
+datahub-next    1D IN CNAME dyna.wikimedia.org.
 
 design          1D IN CNAME dyna.wikimedia.org.
 
