--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -25,9 +25,18 @@ ns2         1D  IN A    198.35.27.27 ; anycasted authdns
 @           600 IN TXT  "1password-site-verification=ZAZP5U62WJFMDDZKWJG7TPKFI4"
 
 ; SPF txt and rr records
-@               600 IN TXT  "v=spf1 ip4:185.15.59.0/24 ip4:208.80.152.0/22 ip6:2620:0:860::/46 include:_spf.google.com ip4:74.121.51.111 ~all"
+
+; ip4:74.121.51.111 - acoustic mass emailer, @fr-tech
+@               600 IN TXT  "v=spf1 include:_cidrs.wikimedia.org include:_spf.google.com ip4:74.121.51.111 ~all"
 @               600 IN TXT  "FC0MOB7SKLHj0AsevTnJvE0W0YYQkPVYOX3UMrINOSk="
 @               600 IN TXT  "MS=ms70322281"
+
+; SPF record for WMF netblocks which may send mail
+; ip4:208.80.152.0/22 - eqiad + codfw
+; ip6:2620:0:860::/56 - codfw
+; ip6:2620:0:861::/56 - eqiad
+_cidrs          1H  IN TXT  "v=spf1 ip4:208.80.152.0/22 ip6:2620:0:860::/56 ip6:2620:0:861::/56 ~all"
+
 ; Shopify, store.wikimedia.org, requested in T355835
 mailern1j           1H IN CNAME 327bdf87d37c.p413.email.myshopify.com.
 ; Shopify, wikimediafoundation.myshopify.com, requested in T355833
@@ -452,7 +461,7 @@ gerrit-replica    300 IN AAAA     2620:0:860:4:208:80:153:104
 git             1D IN CNAME dyna.wikimedia.org.
 
 ; Gitlab records
-gitlab 300 IN TXT "v=spf1 include:wikimedia.org ~all"
+gitlab 300 IN TXT "v=spf1 include:_cidrs.wikimedia.org ~all"
 gitlab 300 IN A 208.80.153.8
 gitlab 300 IN AAAA 2620:0:860:1:208:80:153:8
 gitlab 300 IN TXT "google-site-verification=LKETzxPAjLXm4Bq4G-y-kohjataeTuV3I2-qZny5doU" ; to check spam rates in https://postmaster.google.com
@@ -494,7 +503,7 @@ ldap-codfw      1H  IN CNAME    serpens
 phabricator     300 IN DYNA     geoip!text-addrs
 phabricator     1H  IN MX       10 mx1001
 phabricator     1H  IN MX       10 mx2001
-phabricator     1H  IN TXT      "v=spf1 mx ip6:2620:0:861:102:10:64:16:101 ip6:2620:0:860:103:10:192:32:54 -all"
+phabricator     1H  IN TXT      "v=spf1 include:_cidrs.wikimedia.org ~all"
 ; Google site verification for https://postmaster.google.com
 phabricator     1H  IN TXT      "google-site-verification=3HEEpR1KW0brOBi5FUW8c9z0zIshraxZv0wkm2pfqtc"
 
