--- a/templates/wikipedia.org
+++ b/templates/wikipedia.org
@@ -23,8 +23,7 @@
 ; Yandex Webmaster verification record. This record proves our ownership of this domain to Yandex.
 @                                   600 IN TXT   "yandex-verification: 35c08d23099dc863"
 
-; DMARC records http://dmarc.org/ -- policy none (monitor), for now
-_dmarc                  600     IN TXT "v=DMARC1; p=none; sp=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+_dmarc                  600     IN TXT "v=DMARC1; p=quarantine; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; SPF records
 @                       600     IN TXT  "v=spf1 -all"
