lower MX TTLs prior to adding mx-in servers
As an intial production test, mx-in1001 will be added tomorrow as
an MX server. Lower the MX TTLs as a prepatory step before adding
the new servers.

Bug: T367517
Change-Id: I4a4b98261aa753be48ea349579b447c46bcb98e3

--- a/templates/wikifunctions.org
+++ b/templates/wikifunctions.org
@@ -8,8 +8,8 @@
 @               1D  IN NS   ns2.wikimedia.org.
 
 ; Mail exchangers
-@               1H  IN MX   10  mx1001.wikimedia.org.
-@               1H  IN MX   10  mx2001.wikimedia.org.
+@               300 IN MX   10  mx1001.wikimedia.org.
+@               300 IN MX   10  mx2001.wikimedia.org.
 
 ; Canonical names
 @               300 IN DYNA geoip!text-addrs
