--- a/templates/wikidata.org
+++ b/templates/wikidata.org
@@ -10,8 +10,8 @@
 
 ; Mail exchangers
 
-@           1H  IN MX   10      mx1001.wikimedia.org.
-@           1H  IN MX   10      mx2001.wikimedia.org.
+@           300 IN MX   10      mx1001.wikimedia.org.
+@           300 IN MX   10      mx2001.wikimedia.org.
 
 
 ; Canonical names
