--- a/templates/wikimediafoundation.org
+++ b/templates/wikimediafoundation.org
@@ -10,8 +10,8 @@
 
 ; Mail exchangers
 
-@           1H  IN MX   10  mx1001.wikimedia.org.
-@           1H  IN MX   10  mx2001.wikimedia.org.
+@           300 IN MX   10  mx1001.wikimedia.org.
+@           300 IN MX   10  mx2001.wikimedia.org.
 
 ; SPF records
 @           600 IN TXT  "v=spf1 include:wikimedia.org ~all"
