wikipedia.org spf: add a comment
Indicate its usage

Bug: T369341
Change-Id: I15e5373dcbe64fc92ec44a28cc07d30a05dd1a49

--- a/templates/wikipedia.org
+++ b/templates/wikipedia.org
@@ -28,6 +28,7 @@
 _dmarc                  600     IN TXT "v=DMARC1; p=quarantine; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; SPF records
+; VRTS uses the wikipedia.org domain as a From address
 @                       600     IN TXT  "v=spf1 include:_cidrs.wikimedia.org ~all"
 
 ; CAA records
