wikipedia.org spf: indicate mail is sent from this domain.
I was mistaken in commit ec8318a41fa37abb68a3c4fb7f68f3cc145f92dd, VRTS
does send email originating from the wikipedia.org domain. So add a
proper MX record.

Bug: T369341
Change-Id: I37a61d4bcb5f389e499b7471ddb03340cd4cf41f

--- a/templates/wikipedia.org
+++ b/templates/wikipedia.org
@@ -28,7 +28,7 @@
 _dmarc                  600     IN TXT "v=DMARC1; p=quarantine; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; SPF records
-@                       600     IN TXT  "v=spf1 -all"
+@                       600     IN TXT  "v=spf1 include:_cidrs.wikimedia.org ~all"
 
 ; CAA records
 @                       600     IN CAA 0 issue "digicert.com"
