--- a/templates/wikipedia.org
+++ b/templates/wikipedia.org
@@ -27,7 +27,7 @@
 _dmarc                  600     IN TXT "v=DMARC1; p=none; sp=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
 ; SPF records
-@                       600     IN TXT  "v=spf1 include:wikimedia.org ~all"
+@                       600     IN TXT  "v=spf1 -all"
 
 ; CAA records
 @                       600     IN CAA 0 issue "digicert.com"
