--- a/templates/wikidata.org
+++ b/templates/wikidata.org
@@ -35,6 +35,8 @@ query                        1D IN CNAME dyna.wikimedia.org.
 query-full-experimental      1D IN CNAME dyna.wikimedia.org.
 query-main-experimental      1D IN CNAME dyna.wikimedia.org.
 query-scholarly-experimental 1D IN CNAME dyna.wikimedia.org.
+query-main                   1D IN CNAME dyna.wikimedia.org.
+query-scholarly              1D IN CNAME dyna.wikimedia.org.
 
 ; Wikis (alphabetic order)
 
