wikimedia.org: switch ntp.$site to ntp-a.anycast.wmnet
ntp.anycast.wmnet is deprecated for ntp-a.anycast.wmet (announced from
all sites) so update the CNAME for ntp.$site.

Bug: T366360
Depends-On: Iec68350e16c6e2c16f0e4c14576e7d0c6756d6b9
Change-Id: I4ec719cad6e4935e5f6a78ce7d590bb676a00ac4

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -222,25 +222,25 @@ pay-lvs1002     1H  IN A    208.80.155.3
 ; Service aliases
 
 ;;; eqiad
-ntp.eqiad           1H  IN CNAME ntp.anycast.wmnet.
+ntp.eqiad           1H  IN CNAME ntp-a.anycast.wmnet.
 
 ;;; ulsfo
-ntp.ulsfo           1H  IN CNAME ntp.anycast.wmnet.
+ntp.ulsfo           1H  IN CNAME ntp-a.anycast.wmnet.
 
 ;;; codfw
-ntp.codfw           1H  IN CNAME ntp.anycast.wmnet.
+ntp.codfw           1H  IN CNAME ntp-a.anycast.wmnet.
 
 ;;; esams
-ntp.esams           1H  IN CNAME ntp.anycast.wmnet.
+ntp.esams           1H  IN CNAME ntp-a.anycast.wmnet.
 
 ;;; eqsin
-ntp.eqsin           1H  IN CNAME ntp.anycast.wmnet.
+ntp.eqsin           1H  IN CNAME ntp-a.anycast.wmnet.
 
 ;;; drmrs
-ntp.drmrs           1H  IN CNAME ntp.anycast.wmnet.
+ntp.drmrs           1H  IN CNAME ntp-a.anycast.wmnet.
 
 ;;; magru
-ntp.magru           1H  IN CNAME ntp.anycast.wmnet.
+ntp.magru           1H  IN CNAME ntp-a.anycast.wmnet.
 
 ; Round Robin LVS Service records
 
