wikimedia.org: Set CNAME record for donate.m.wikimedia.org
Bug: T152882
Change-Id: I98be1497c10168ac8e8bed80f351dd6478cae9af

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -307,6 +307,7 @@ cn.m                1D IN CNAME dyna.wikimedia.org.
 co.m                1D IN CNAME dyna.wikimedia.org.
 commons.m           1D IN CNAME dyna.wikimedia.org.
 dk.m                1D IN CNAME dyna.wikimedia.org.
+donate.m            1D IN CNAME dyna.wikimedia.org.
 ec.m                1D IN CNAME dyna.wikimedia.org.
 ee.m                1D IN CNAME dyna.wikimedia.org.
 electcom.m          1D IN CNAME dyna.wikimedia.org.
