add mx-in{1001,2001) as MX servers
This change adds mx-in{1001,2001} as MX servers for our domains. These
will replace mx{1001,2001} after a period of time running concurrently.

Bug: T367517
Change-Id: I61837f4cd58e4a37d64847052d9fc085da8c30e8

--- a/templates/wikidata.org
+++ b/templates/wikidata.org
@@ -10,6 +10,8 @@
 
 ; Mail exchangers
 
+@           300 IN MX   10      mx-in1001.wikimedia.org.
+@           300 IN MX   10      mx-in2001.wikimedia.org.
 @           300 IN MX   10      mx1001.wikimedia.org.
 @           300 IN MX   10      mx2001.wikimedia.org.
 
