--- a/templates/wikifunctions.org
+++ b/templates/wikifunctions.org
@@ -8,6 +8,8 @@
 @               1D  IN NS   ns2.wikimedia.org.
 
 ; Mail exchangers
+@               300 IN MX   10  mx-in1001.wikimedia.org.
+@               300 IN MX   10  mx-in2001.wikimedia.org.
 @               300 IN MX   10  mx1001.wikimedia.org.
 @               300 IN MX   10  mx2001.wikimedia.org.
 
