--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -705,6 +705,7 @@ za               1D IN CNAME dyna.wikimedia.org.
 ; Other websites (NO wikis!)
 2030             1D IN CNAME dyna.wikimedia.org.
 airflow-analytics-test 1D IN CNAME dyna.wikimedia.org.
+airflow-test-k8s 1D IN CNAME dyna.wikimedia.org.
 analytics        1D IN CNAME dyna.wikimedia.org.
 analytics.frdev  1D IN A     208.80.155.4
 analytics-codfw.frdev  1D IN A     208.80.152.238
