--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -490,6 +490,7 @@ idm-test        5M  IN CNAME idm-test1001.wikimedia.org.
 
 idp             5M  IN CNAME idp1004.wikimedia.org.
 idp-test        5M  IN CNAME idp-test1004.wikimedia.org.
+cloudidp-dev    5M  IN CNAME dyna.wikimedia.org.
 
 intake-logging   300 IN DYNA  geoip!text-next
 intake-analytics 1D  IN CNAME dyna.wikimedia.org.
