--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -519,10 +519,11 @@ netbox-exports  1D  IN CNAME    dyna.wikimedia.org.
 
 orchestrator    5M  IN CNAME    dborch1001
 
-payments        5M  IN CNAME    payments-eqiad
-payments-eqiad  1H  IN A        208.80.155.5 ; wmf-zone-validator-ignore=MISSING_PTR_FOR_NAME_AND_IP
-payments-codfw  1H  IN A        208.80.152.228
-payments-staging 1H  IN A        208.80.155.10
+payments         5M  IN CNAME payments-eqiad
+payments-eqiad   1H  IN A     208.80.155.5 ; wmf-zone-validator-ignore=MISSING_PTR_FOR_NAME_AND_IP
+payments-a-codfw 1H  IN A     208.80.152.227
+payments-codfw   1H  IN A     208.80.152.228
+payments-staging 1H  IN A     208.80.155.10
 
 payments-listener-eqiad 1H  IN A    208.80.155.19
 payments-listener-codfw 1H  IN A    208.80.152.233
