wmfusercontent.org: add MX records
Per discussion with bblack, MX records are needed for TLS cert issuance.

Change-Id: Ia5ff8cf45e53fdb6d56a98eaca3372155d1769ec

--- a/templates/wmfusercontent.org
+++ b/templates/wmfusercontent.org
@@ -9,6 +9,8 @@
 @           1D  IN NS   ns2.wikimedia.org.
 
 ; Mail exchangers
+@           300 IN MX   10  mx-in1001.wikimedia.org.
+@           300 IN MX   10  mx-in2001.wikimedia.org.
 
 ; SPF txt and rr records (no email)
 @           600 IN TXT  "v=spf1 -all"
