wikimedia.org: provision subdomains for our airflow instances
This will pave the way for the migration of the airflow webservers
to Kubernetes, which will make them publicly visible (and OIDC
authenticated).

Signed-off-by: Balthazar Rouberol <brouberol@wikimedia.org>
Bug: T371208
Change-Id: I167ebbead596421342f4393c0184bf05a2f57f30

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -706,8 +706,14 @@ za               1D IN CNAME dyna.wikimedia.org.
 
 ; Other websites (NO wikis!)
 2030             1D IN CNAME dyna.wikimedia.org.
+airflow-analytics 1D IN CNAME dyna.wikimedia.org.
+airflow-analytics-product 1D IN CNAME dyna.wikimedia.org.
 airflow-analytics-test 1D IN CNAME dyna.wikimedia.org.
+airflow-platform-eng 1D IN CNAME dyna.wikimedia.org.
+airflow-research 1D IN CNAME dyna.wikimedia.org.
+airflow-search 1D IN CNAME dyna.wikimedia.org.
 airflow-test-k8s 1D IN CNAME dyna.wikimedia.org.
+airflow-wmde 1D IN CNAME dyna.wikimedia.org.
 analytics        1D IN CNAME dyna.wikimedia.org.
 analytics.frdev  1D IN A     208.80.155.4
 analytics-codfw.frdev  1D IN A     208.80.152.238
