--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -498,6 +498,7 @@ intake-analytics 1D  IN CNAME dyna.wikimedia.org.
 integration     1D IN CNAME dyna.wikimedia.org.
 irc             5M  IN CNAME    irc1002
 ircstream       5M  IN CNAME    irc1003
+ircstream-sse   5M  IN CNAME    irc1004
 
 klaxon          5M  IN CNAME    alert1002
 
