--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -164,7 +164,7 @@ dumps           1H  IN CNAME clouddumps1002
 lists           5M  IN A    208.80.154.81
 lists           5M  IN AAAA 2620:0:861:3:208:80:154:81
 lists           1H  IN MX   10 lists
-lists           1H  IN TXT  "v=spf1 mx a:mx1001.wikimedia.org a:mx2001.wikimedia.org ~all"
+lists           1H  IN TXT  "v=spf1 mx ~all"
 _dmarc.lists    1H  IN TXT "v=DMARC1; p=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 _domainkey.lists        1H  IN TXT  "o=~; r=postmaster@wikimedia.org;"
 _adsp._domainkey.lists  1H  IN TXT  "dkim=unknown;"
@@ -252,8 +252,8 @@ ntp.magru           1H  IN CNAME ntp-a.anycast.wmnet.
 ;;; eqiad (only records not auto-generated from Netbox)
 donate-lb.eqiad     1H IN A 208.80.154.224 ; same IP of text-lb
 donate-lb.eqiad     1H IN AAAA 2620:0:861:ed1a::1 ; same IP of text-lb
-donate-lb.eqiad     1H IN MX 10 mx1001
-donate-lb.eqiad     1H IN MX 50 mx2001
+donate-lb.eqiad     1H IN MX 10 mx-in1001
+donate-lb.eqiad     1H IN MX 50 mx-in2001
 
 ; These legacy entries should eventually move to RESTBase
 cxserver            1D IN CNAME dyna.wikimedia.org.
@@ -265,14 +265,14 @@ ores-legacy         1D IN CNAME dyna.wikimedia.org.
 ;;; ulsfo (only records not auto-generated from Netbox)
 donate-lb.ulsfo     1H IN A 198.35.26.96 ; same IP of text-lb
 donate-lb.ulsfo     1H IN AAAA 2620:0:863:ed1a::1 ; same IP of text-lb
-donate-lb.ulsfo     1H IN MX 10    mx1001
-donate-lb.ulsfo     1H IN MX 50    mx2001
+donate-lb.ulsfo     1H IN MX 10    mx-in1001
+donate-lb.ulsfo     1H IN MX 50    mx-in2001
 
 ;;; eqsin (only records not auto-generated from Netbox)
 donate-lb.eqsin     1H IN A 103.102.166.224 ; same IP of text-lb
 donate-lb.eqsin     1H IN AAAA 2001:df2:e500:ed1a::1 ; same IP of text-lb
-donate-lb.eqsin     1H IN MX 10    mx1001
-donate-lb.eqsin     1H IN MX 50    mx2001
+donate-lb.eqsin     1H IN MX 10    mx-in1001
+donate-lb.eqsin     1H IN MX 50    mx-in2001
 
 ;;; codfw
 donate-lb.codfw     1H IN A 208.80.153.224
@@ -281,8 +281,8 @@ donate-lb.codfw     1H IN AAAA 2620:0:860:ed1a::1
 ;;; esams (only records not auto-generated from Netbox)
 donate-lb.esams     1H IN A 185.15.59.224 ; same IP of text-lb
 donate-lb.esams     1H IN AAAA 2a02:ec80:300:ed1a::1 ; same IP of text-lb
-donate-lb.esams     1H IN MX 10    mx1001
-donate-lb.esams     1H IN MX 50    mx2001
+donate-lb.esams     1H IN MX 10    mx-in1001
+donate-lb.esams     1H IN MX 50    mx-in2001
 
 ; GeoIP Mappings (T332025)
 measure-eqiad       1D IN CNAME upload-lb.eqiad.wikimedia.org.
@@ -563,8 +563,6 @@ research         1D IN CNAME dyna.wikimedia.org.
 reports.frdev   1H  IN CNAME    frdev-eqiad
 
 rt              300 IN DYNA     geoip!text-addrs
-rt              1H  IN MX       10 mx1001
-rt              1H  IN MX       50 mx2001
 
 secure          1D IN CNAME dyna.wikimedia.org.
 
