wikimedia-dns.org: dummy change to test authdns-update alert
Change-Id: Id78311cdebe4820d8c79ee2ba46deabe231ed172

--- a/templates/wikimedia-dns.org
+++ b/templates/wikimedia-dns.org
@@ -28,7 +28,7 @@
 
 ; Wikis (alphabetic order)
 
-; Wikidough resolver. Anycasted.
+; Wikidough resolver. Anycast.
 @           600 IN A    185.71.138.138
 @           600 IN AAAA 2001:67c:930::1
 
