Add UAE user group mobile domain
As requested by the contact person of WMUAE in WikiArabia

Bug: T152882
Change-Id: I0eeb33f825a03d3551c44b157c5e6d8ec30274b2

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -296,6 +296,7 @@ measure-magru       1D IN CNAME upload-lb.magru.wikimedia.org.
 ; Mobile
 
 advisory.m          1D IN CNAME dyna.wikimedia.org.
+ae.m                1D IN CNAME dyna.wikimedia.org.
 am.m                1D IN CNAME dyna.wikimedia.org.
 amical.m            1D IN CNAME dyna.wikimedia.org.
 api.m               1D IN CNAME dyna.wikimedia.org.
