Switch analytics.frdev.wikimedia.org to the frack codfw analytics server.
Bug: T366950
Change-Id: Ie9b224ae6345c7dee4eb9c94ff0a3f30302193c6

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -711,8 +711,8 @@ airflow-search 1D IN CNAME dyna.wikimedia.org.
 airflow-test-k8s 1D IN CNAME dyna.wikimedia.org.
 airflow-wmde 1D IN CNAME dyna.wikimedia.org.
 analytics        1D IN CNAME dyna.wikimedia.org.
-analytics.frdev  1D IN A     208.80.155.4
-analytics-codfw.frdev  1D IN A     208.80.152.238
+analytics-eqiad.frdev  1D IN A     208.80.155.4
+analytics.frdev  1D IN A     208.80.152.238
 blog             1H IN CNAME blog-wikimedia-org.go-vip.net.
 bugs             1D IN CNAME dyna.wikimedia.org.
 bugzilla         1D IN CNAME dyna.wikimedia.org.
