Reduce TTL on analytics.frdev.wikimedia.org to 1h.
Change-Id: Id3152091f6c20b69dea66e831ffcf1bcbc663984

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -712,7 +712,7 @@ airflow-test-k8s 1D IN CNAME dyna.wikimedia.org.
 airflow-wmde 1D IN CNAME dyna.wikimedia.org.
 analytics        1D IN CNAME dyna.wikimedia.org.
 analytics-eqiad.frdev  1D IN A     208.80.155.4
-analytics.frdev  1D IN A     208.80.152.238
+analytics.frdev  1H IN A     208.80.152.238
 blog             1H IN CNAME blog-wikimedia-org.go-vip.net.
 bugs             1D IN CNAME dyna.wikimedia.org.
 bugzilla         1D IN CNAME dyna.wikimedia.org.
