--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -705,6 +705,7 @@ za               1D IN CNAME dyna.wikimedia.org.
 airflow-analytics 1D IN CNAME dyna.wikimedia.org.
 airflow-analytics-product 1D IN CNAME dyna.wikimedia.org.
 airflow-analytics-test 1D IN CNAME dyna.wikimedia.org.
+airflow-ml 1D IN CNAME dyna.wikimedia.org.
 airflow-platform-eng 1D IN CNAME dyna.wikimedia.org.
 airflow-research 1D IN CNAME dyna.wikimedia.org.
 airflow-search 1D IN CNAME dyna.wikimedia.org.
