--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -381,6 +381,7 @@ wikimania2019.m     1D IN CNAME dyna.wikimedia.org.
 wikimaniateam.m     1D IN CNAME dyna.wikimedia.org.
 wikipedia-pl-sysop.m 1D IN CNAME dyna.wikimedia.org.
 wikipedia-it-arbcom.m 1D IN CNAME dyna.wikimedia.org.
+wikipedia-zh-arbcom.m 1D IN CNAME dyna.wikimedia.org.
 za.m                1D IN CNAME dyna.wikimedia.org.
 
 ; Cams
@@ -697,6 +698,7 @@ wikimania2019    1D IN CNAME dyna.wikimedia.org.
 wikimaniateam    1D IN CNAME dyna.wikimedia.org.
 wikipedia-pl-sysop 1D IN CNAME dyna.wikimedia.org.
 wikipedia-it-arbcom 1D IN CNAME dyna.wikimedia.org.
+wikipedia-zh-arbcom 1D IN CNAME dyna.wikimedia.org.
 www              1D IN CNAME dyna.wikimedia.org.
 za               1D IN CNAME dyna.wikimedia.org.
 
