--- a/templates/wmfusercontent.org
+++ b/templates/wmfusercontent.org
@@ -21,6 +21,7 @@
 ; CAA records
 @           600 IN CAA 0 issue "digicert.com"
 @           600 IN CAA 0 issue "letsencrypt.org"
+@           600 IN CAA 0 issue "pki.goog"
 @           600 IN CAA 0 iodef "mailto:dns-admin@wikimedia.org"
 
 ; Servers (alphabetic order)
