--- a/templates/w.wiki
+++ b/templates/w.wiki
@@ -28,4 +28,5 @@ _dmarc                  600     IN TXT "v=DMARC1; p=none; sp=none; rua=mailto:dm
 ; CAA records
 @           600 IN CAA 0 issue "digicert.com"
 @           600 IN CAA 0 issue "letsencrypt.org"
+@           600 IN CAA 0 issue "pki.goog"
 @           600 IN CAA 0 iodef "mailto:dns-admin@wikimedia.org"
