create spiderpig.wikimedia.org for releng's scap API server
Just creating the name and pointing it to dyna like other misc
sites that are not wikis.

In the next steps it will be pointed to a deployment server.

Bug: T383946
Change-Id: I1b48dc05ddd98d9c599154df24f9bb289497c203

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -792,6 +792,7 @@ transparency-archive 1D IN CNAME dyna.wikimedia.org.
 search           1D IN CNAME dyna.wikimedia.org.
 shop             1D IN CNAME dyna.wikimedia.org.
 soundlogo        1H IN CNAME wikimediasoundlogo.go-vip.net.
+spiderpig        1D IN CNAME dyna.wikimedia.org.
 store            1H  IN CNAME    c.ssl.shopify.com.
 static-bugzilla  1D IN CNAME dyna.wikimedia.org.
 static-codereview  1D IN CNAME dyna.wikimedia.org.
