--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -140,12 +140,15 @@ bounce.email    1H  IN TXT  "v=spf1 a ip4:74.121.51.111 -all"
 reply.email     1H  IN A    52.3.180.22
 reply.email     1H  IN MX   5 reply.email.wikimedia.org.
 reply.email     1H  IN TXT  "v=spf1 a ip4:74.121.51.111 -all"
-; DNS Record related to lp.email.wikimedia.org - T336000
-lp.email        1M IN CNAME 21f8e16b76313de0.acs4.tc.
 
 spop1024._domainkey.email   1H IN TXT "k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQDkkVXsWmUfiM+mhp33gqUfjpRoe92/jR/DxHOH/5UEXu1/zfy1Niu23GOsOMiAclXdyG8CDR7cuikdYHZiAYry7crqkKkTWCPrt0YvTTVgS4aIPsfcR59FsTzy3tEpmETPOs31XgRRfXKzI591XsWCxLo6cSTjeHxo0tQGJWejMQIDAQAB"
 ; AWS validation CNAME for Acoustic - T188561 T336000
 _c02d3189682d060e348d305b652c2ece.email 1M IN CNAME _d727f5c7066e58d1a23773f6b6ce9dc2.fmfdpfvvyn.acm-validations.aws.
+
+; DNS Records related to lp.email.wikimedia.org - T336000
+lp.email        1M IN CNAME 21f8e16b76313de0.acs4.tc.
+; AWS validation CNAME for Acoustic landing page - T384931
+_45077a66a799e60855d7546ffdab9847.lp.email 1M IN CNAME _6f10127d42f52c65ff9c62e50e7fd9c9.zfyfvmchrl.acm-validations.aws.
 
 
 ; "dyna.wikimedia.org." is the focal point of CNAMEs across all our zones for
