--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -145,8 +145,8 @@ spop1024._domainkey.email   1H IN TXT "k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCB
 ; AWS validation CNAME for Acoustic - T188561 T336000
 _c02d3189682d060e348d305b652c2ece.email 1M IN CNAME _d727f5c7066e58d1a23773f6b6ce9dc2.fmfdpfvvyn.acm-validations.aws.
 
-; DNS Records related to lp.email.wikimedia.org - T336000
-lp.email        1M IN CNAME 21f8e16b76313de0.acs4.tc.
+; DNS Records related to lp.email.wikimedia.org - T336000, T384931
+lp.email        1M IN CNAME pages04.net.
 ; AWS validation CNAME for Acoustic landing page - T384931
 _45077a66a799e60855d7546ffdab9847.lp.email 1M IN CNAME _6f10127d42f52c65ff9c62e50e7fd9c9.zfyfvmchrl.acm-validations.aws.
 
