define main airflow public/discovery DNS records
These will be used by the airflow instance to which we're going to
migrate airflow-analytics to, that will become our main instance once
airflow supports multi-tenancy.

Signed-off-by: Balthazar Rouberol <brouberol@wikimedia.org>
Bug: T386282
Change-Id: I1d7f8e2ca4fd4a4cb4292cde4a2b524ceb7ba124

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -707,6 +707,7 @@ auth             1D IN CNAME dyna.wikimedia.org.
 
 ; Other websites (NO wikis!)
 2030             1D IN CNAME dyna.wikimedia.org.
+airflow           1D IN CNAME dyna.wikimedia.org.
 airflow-analytics 1D IN CNAME dyna.wikimedia.org.
 airflow-analytics-product 1D IN CNAME dyna.wikimedia.org.
 airflow-analytics-test 1D IN CNAME dyna.wikimedia.org.
