Revert "wikimedia-dns.org: add test TYPE65 record (take three, in proper format)"
This reverts commit 864d1f051364ada960473e67a4df9f44919989ad.

Reason for revert: testing complete, let's revert

Change-Id: I09580271de4ab84ac605c8a143a7f778e3718678

--- a/templates/wikimedia-dns.org
+++ b/templates/wikimedia-dns.org
@@ -37,7 +37,7 @@
 ; landing page
 check       600 IN A        185.71.138.139
 check       600 IN AAAA     2001:67c:930::2
-check       60  IN TYPE65   \# 11 00 01 00 00 05 00 04 74 65 73 74
+check       60  IN TYPE65   \# 8 6563683D74657374
 
 ; yes.check (DoH)
 yesdoh.check    600 IN A    185.71.138.140
