use dyna.wikimedia.org for rt.wikimedia.org
Using the dyna.wikimedia.org CNAME or using a DYNA record
with geoip should be about the same thing, right traffic team?

Currently rt.wikimedia.org is broken anyways so not much that would be
affected here either way.

We do want to turn this into a redirect/rewrite rule though.

Just helping out to make it more consistent with other entries.

Bug: T385777
Change-Id: I865c6fb8fe4e08560db102930881ee7b8f0156f6

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -560,7 +560,7 @@ research         1D IN CNAME dyna.wikimedia.org.
 
 reports.frdev   1H  IN CNAME    frdev-eqiad
 
-rt              300 IN DYNA     geoip!text-addrs
+rt              1H IN CNAME dyna.wikimedia.org.
 
 secure          1D IN CNAME dyna.wikimedia.org.
 
