wdqs: create query-legacy-full.wikidata.org
Requests flow should be as follows:

query-legacy-full.wikidata.org
-> dyna.wikimedia.org
-> (backend.yaml trafficserver routing)

This is a soft-revert of
Ife1751c46a30d31ba2f554fdeb4f170e3e9c88dc

Bug: T384422
Change-Id: I591ee47ef46dc8688b1e67fb6d735534fd6f969a

--- a/templates/wikidata.org
+++ b/templates/wikidata.org
@@ -35,6 +35,7 @@
 query                        1D IN CNAME dyna.wikimedia.org.
 query-main                   1D IN CNAME dyna.wikimedia.org.
 query-scholarly              1D IN CNAME dyna.wikimedia.org.
+query-legacy-full            1D IN CNAME dyna.wikimedia.org.
 
 ; Wikis (alphabetic order)
 
