--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -33,6 +33,9 @@ rabbitmq03 5M  IN CNAME  cloudcontrol2005-dev.private.codfw.wikimedia.cloud.
 nat.cloudgw         5M  IN A      185.15.57.1
 
 $ORIGIN openstack.codfw1dev.wikimediacloud.org.
+
+keystone 5M  IN CNAME  openstack.codfw1dev.wikimediacloud.org.
+
 ;
 ; EQIAD
 ; eqiad1 openstack region
@@ -52,3 +55,4 @@ nat.cloudgw         5M  IN A      185.15.56.1
 
 $ORIGIN openstack.eqiad1.wikimediacloud.org.
 
+keystone 5M  IN CNAME  openstack.eqiad1.wikimediacloud.org.
