create codesearch.wikimedia.org, point to standard DYNA
To be used with k8s-ingress where it's added in I5f318eee18403cbd
as a TLS extra SAN.

Bug: T268199
Change-Id: Id96baac04ae22bad32f25a5a031c78741e7711a1

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -737,6 +737,7 @@ civicrm          300 IN MX       10 mx-in1001
 civicrm          300 IN MX       10 mx-in2001
 civicrm.frdev    1H  IN CNAME    frdev-eqiad
 civicrm-codfw    1H  IN A        208.80.152.232
+codesearch       1D IN CNAME dyna.wikimedia.org.
 coffee           1D IN CNAME dyna.wikimedia.org.
 cs               1D IN CNAME dyna.wikimedia.org.
 cz               1D IN CNAME dyna.wikimedia.org.
