--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -294,6 +294,9 @@ measure-eqsin       1D IN CNAME upload-lb.eqsin.wikimedia.org.
 measure-drmrs       1D IN CNAME upload-lb.drmrs.wikimedia.org.
 measure-magru       1D IN CNAME upload-lb.magru.wikimedia.org.
 
+; HIBP confirm records
+idm2001 1H IN TXT "have-i-been-pwned-verification=dweb_sowfnnrhssk6h7dza4vxxbyr"
+
 ; Mobile
 
 advisory.m          1D IN CNAME dyna.wikimedia.org.
