--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -295,7 +295,7 @@ measure-drmrs       1D IN CNAME upload-lb.drmrs.wikimedia.org.
 measure-magru       1D IN CNAME upload-lb.magru.wikimedia.org.
 
 ; HIBP confirm records
-idm2001 1H IN TXT "have-i-been-pwned-verification=dweb_sowfnnrhssk6h7dza4vxxbyr"
+idp2004 1H IN TXT "have-i-been-pwned-verification=dweb_22dlvh5d4i0m77o2levrabrv"
 
 ; Mobile
 
