--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -295,7 +295,7 @@ measure-drmrs       1D IN CNAME upload-lb.drmrs.wikimedia.org.
 measure-magru       1D IN CNAME upload-lb.magru.wikimedia.org.
 
 ; HIBP confirm records
-phabricator 1H IN TXT "have-i-been-pwned-verification=dweb_moale78bwvnct7smq6avjala"
+lists 1H IN TXT "have-i-been-pwned-verification=dweb_hnnrkyzbb7lx94c9jjviv3md"
 
 ; Mobile
 
